--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "cz-conventional-emoji": "^1.0.2",
     "typescript": "~4.3.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-emoji"
+    }
   },
   "private": true
 }
